k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      # volumes: specifies all the volumes needed for each instance of this pod
      volumes:
        # specifies a PVC object, pointing to its config.yaml by name
        - name: postgres-storage
          # persistentVolumeClaim: a claim which requests k8 to find storage on pod creation
            # - specifies accessMode, storage size, etc...
            # - not an actual volume but a claim to one
            # - its up to k8 to find storage based on claim
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432 # default postgres port
          # volumeMounts: describes how to access storage within container
          volumeMounts:
            # references the volume defined above to be used
            - name: postgres-storage
              # mountPath: where in container storage should be mounted
                # why /var/lib/postgresql/data?
                #   - we want to backup the data stored by the postgres db
                #   - the default storage location for postgres is this one
              mountPath: /var/lib/postgresql/data
              # subPath: 
              #   - data from mountPath with be backed up to PVC
              #   - subPath specifies the name of the PVC folder holding that data
              #   - specific to postgres and needed to prevent error
              subPath: postgres
