k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  # clusterIp: exposes a container to other containers in Node
    # - used w/containers to allow other containers to reach them
    # - use instead of NodePort in production
  type: ClusterIP
  # selector: label selector property
  #   - used to select the relevent component
  #   - do so by passing label name you set to that component 
  selector:
    # component: links this service obj to obj with metadata label 'web' (so our Pod)
    # - this is how the above port fwd config knows what that forward goes to
    component: web
  ports:
    # port: the port ANOTHER CONTAINER should use to be fwd'd to this apps targetPort
    # - if no other pods need to reach this its useless
    - port: 3000 
      # targetPort: port INSIDE POD to open traffic to
      targetPort: 3000
